--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,36 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="?android:attr/listPreferredItemHeightLarge"
-    android:background="@mipmap/itemback">
+    android:background="@mipmap/itemback"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/cw"
-        android:layout_width="wrap_content"
-        android:layout_height="80dp"
-        android:layout_centerInParent="true"
-        android:layout_alignParentLeft="true"
-        android:textSize="25sp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/ew"
-        android:layout_width="wrap_content"
-        android:layout_height="80dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="85dp"
-        android:layout_toRightOf="@id/cw"
-        android:textColor="#ff0000"
-        android:textSize="28sp" />
+        <TextView
+            android:id="@+id/cw"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:layout_weight="3"
+            android:textSize="30dp" />
 
-    <TextView
-        android:id="@+id/times"
-        android:layout_width="wrap_content"
-        android:layout_height="80dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="218dp"
-        android:layout_toRightOf="@id/ew"
-        android:textColor="#ff0000"
-        android:textSize="28sp" />
+        <TextView
+            android:id="@+id/ew"
+            android:layout_width="50dp"
+            android:layout_height="63dp"
 
-</RelativeLayout>
+            android:layout_weight="5"
+            android:textColor="#ff0000"
+            android:textSize="20dp" />
+
+        <TextView
+            android:id="@+id/times"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_weight="2"
+            android:textColor="#ff0000"
+            android:textSize="28sp" />
+    </LinearLayout>
+
+</LinearLayout>
