--- a/app/src/main/res/layout/activity_del_word.xml
+++ b/app/src/main/res/layout/activity_del_word.xml
@@ -9,7 +9,7 @@
     tools:context=".MainActivity">
 
     <SearchView
-        android:id="@+id/searchView"
+        android:id="@+id/searchView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:iconifiedByDefault="false"
@@ -23,7 +23,7 @@
         android:orientation="vertical">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerview2"
+            android:id="@+id/recyclerview3"
             android:layout_width="match_parent"
             android:layout_height="630dp"
             android:layout_weight="9.5"
@@ -43,24 +43,13 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/like"
+            android:id="@+id/back2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:background="@drawable/round_corner"
             android:gravity="center"
-            android:text="我的收藏"
-            android:textColor="#ffffff"
-            android:textSize="20dp" />
-
-        <Button
-            android:id="@+id/admin"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="@drawable/round_corner"
-            android:gravity="center"
-            android:text="管理模式"
+            android:text="返回"
             android:textColor="#ffffff"
             android:textSize="20dp" />
     </LinearLayout>
