--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -27,30 +27,36 @@
 
         <Button
             android:id="@+id/add"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
             android:layout_marginTop="80dp"
             android:layout_gravity="center"
+            android:textColor="#ffffff"
             android:gravity="center"
             android:textSize="30dp"
+            android:background="@drawable/round_corner"
             android:text="添加单词" />
 
         <Button
             android:id="@+id/delete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
             android:layout_marginTop="80dp"
             android:layout_gravity="center"
+            android:background="@drawable/round_corner"
+            android:textColor="#ffffff"
             android:gravity="center"
             android:textSize="30dp"
             android:text="删除单词" />
 
         <Button
             android:id="@+id/back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
             android:layout_marginTop="80dp"
             android:layout_gravity="center"
+            android:background="@drawable/round_corner"
+            android:textColor="#ffffff"
             android:gravity="center"
             android:textSize="30dp"
             android:text="返回" />
