--- a/app/src/main/res/layout/activity_del_word.xml
+++ b/app/src/main/res/layout/activity_del_word.xml
@@ -44,8 +44,8 @@
 
         <Button
             android:id="@+id/back2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
             android:layout_gravity="center"
             android:background="@drawable/round_corner"
             android:gravity="center"
