--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="啵啵个性字典"
+        android:text="啵啵个性单词本"
         android:gravity="center"
         android:textColor="#ffffff"
         android:background="#FF4500"
@@ -34,10 +34,12 @@
 
         <Button
             android:id="@+id/go"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
             android:layout_marginTop="80dp"
             android:layout_gravity="center"
+            android:textColor="#ffffff"
+            android:background="@drawable/round_corner"
             android:gravity="center"
             android:textSize="30dp"
             android:text="开始使用" />
