--- a/app/src/main/res/layout/activity_my_like.xml
+++ b/app/src/main/res/layout/activity_my_like.xml
@@ -7,13 +7,16 @@
     android:background="@mipmap/background"
     android:orientation="vertical"
     tools:context=".MainActivity">
-
-    <SearchView
-        android:id="@+id/searchView3"
+    <TextView
+        android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:iconifiedByDefault="false"
-        android:queryHint="请输入关键字" />
+        android:text="点击即可删除喔"
+        android:gravity="center"
+        android:textColor="#ffffff"
+        android:background="#FF4500"
+        android:layout_gravity="center"
+        android:textSize="25dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -36,7 +39,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="53dp"
+        android:layout_height="36dp"
         android:layout_gravity="center"
         android:layout_weight="0.5"
         android:gravity="center"
@@ -44,8 +47,8 @@
 
         <Button
             android:id="@+id/back3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
             android:layout_gravity="center"
             android:background="@drawable/round_corner"
             android:gravity="center"
